--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 	<header>
+			<p>简单修改</p>
 			<img id="header-img" src="images/gh-logo.png">
 			<h1 id='header-words'>EXERCISE</h1> 
 	</header>
