Add the first git command

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<li>Accept Pull Request</li>
 				<li>Try Update Your Local Repository</li>
 				<li>Fix Any Merge Issues If Necessary</li>
-
+				<li>Hello World</li>
 			</ol>
 			
 		</div>
@@ -68,7 +68,7 @@
 		<a href="tel:8326618802">832.661.8802</a><br>
 		&copy; <a href="https://github.com/TTN-js">2017 T.T.N.</a> 
 		</p>
-		<p>参考项目</p>
+		<p>参考项目：葫芦侠</p>
 	</footer>	
 
 	 <script src="js/script.js"></script> 
