--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<div class="accordion"><h1>INSTRUCTIONS</h1></div>
 		<div class="panel">
 			<ol>
+				<li>git_learning_02的新内容</li>
 				<li>Partner Up</li>
 				<li>Rochambeau || Choose an Admin</li>
 				<li>Follow Your Roles</li>
