Add commit command

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<div class="accordion"><h1>INSTRUCTIONS</h1></div>
 		<div class="panel">
 			<ol>
-				<li>Partner Up 修改一个内容</li>
+				<li>Partner Up</li>
 				<li>Rochambeau || Choose an Admin</li>
 				<li>Follow Your Roles</li>
 				<li>Once Finished - Switch Roles With Your Partner and Repeat Step 3</li>
@@ -31,7 +31,7 @@
 			  <li>Create a New GitHub Repository</li>
 			  <li>Push Cloned Repository to Your New GitHub Repository</li>
 			  <li>Add Your Partner as a Contributor</li>
-			 
+			  <li>这里是git_learning_01</li>
 
 				<h3>Once The Contributor (Your Partner) Creates a Pull Request...</h3>
 
