Add stash and log

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<div class="panel">
 			<ol>
 				<li>git_learning_02的新内容</li>
+				<li>这里有个重要的内容处理啊</li>
 				<li>Partner Up</li>
 				<li>Rochambeau || Choose an Admin</li>
 				<li>Follow Your Roles</li>
