--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<div class="panel">
 			<ol>
 				<li>git_learning_02的新内容</li>
+				<li>这里有一个特别重要的文件处理</li>
 				<li>Partner Up</li>
 				<li>Rochambeau || Choose an Admin</li>
 				<li>Follow Your Roles</li>
