--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<header>
 			<img id="header-img" src="images/gh-logo.png">
 			<h1 id='header-words'>EXERCISE</h1> 
+			<h1>Hello you can ready to git now!</h1>
 	</header>
 
 	<section>
